--- a/src/TlharghHost.csproj
+++ b/src/TlharghHost.csproj
@@ -32,9 +32,30 @@
     <Page Remove="Test\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="tlharghhost.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="tlharghhost.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Dvin" Version="2.0.2095.920" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="App.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
